libs/error-stack/tests/ui/into_report.stderr
error[E0599]: the method `into_report` exists for enum `Result<(), Report<RootError>>`, but its trait bounds were not satisfied
  --> tests/ui/into_report.rs:22:20
   |
22 |     let _ = result.into_report();
   |                    ^^^^^^^^^^^ method cannot be called on `Result<(), Report<RootError>>` due to unsatisfied trait bounds
   |
  ::: $RUST/core/src/result.rs
   |
   | pub enum Result<T, E> {
   | --------------------- doesn't satisfy `_: IntoReport`
   |
  ::: src/report.rs
   |
   | pub struct Report<C> {
   | -------------------- doesn't satisfy `_: From<Report<RootError>>`
   |
   = note: the following trait bounds were not satisfied:
           `error_stack::Report<error_stack::Report<RootError>>: From<error_stack::Report<RootError>>`
           which is required by `Result<(), error_stack::Report<RootError>>: IntoReport`
